--- a/package.json
+++ b/package.json
@@ -8,17 +8,42 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.22.9",
+    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/typography": "^0.4.1",
+    "esbuild": "^0.12.29",
+    "focus-trap-react": "^10.2.1",
+    "gray-matter": "^4.0.3",
+    "mdx-bundler": "^9.2.1",
     "next": "10.2.3",
+    "next-seo": "^6.1.0",
+    "next-use-posthog": "^1.16.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.10.1",
+    "react-share": "^4.4.1",
+    "react-tippy": "^1.4.0",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "17.0.9",
+    "@types/react": "^17.0.38",
+    "@types/styled-components": "^5.1.19",
     "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.4",
-    "typescript": "4.3.2"
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^1.13.3",
+    "date-fns": "^2.28.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^2.2.19",
+    "twin.macro": "^2.8.2",
+    "typescript": "^4.3.2"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
